<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingHorizontal="15dp"
	android:paddingTop="20dp">
	<TextView
		android:layout_gravity="center"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_title"
		android:textStyle="bold"
		android:textSize="25sp"
		android:textColor="@color/black"/>
	<ScrollView
		android:layout_marginVertical="15dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:id="@+id/my_feed"
				android:fontFamily="@font/notosanscjkkr_regular"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/my_feed"
				android:textColor="@color/black"
				android:textSize="15sp"/>
			<TextView
				android:id="@+id/alert"
				android:fontFamily="@font/notosanscjkkr_regular"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/alert"
				android:textColor="@color/black"
				android:textSize="15sp"/>
			<TextView
				android:id="@+id/change_profile"
				android:fontFamily="@font/notosanscjkkr_regular"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/change_profile"
				android:textColor="@color/black"
				android:textSize="15sp"/>
			<TextView
				android:id="@+id/logout"
				android:fontFamily="@font/notosanscjkkr_regular"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/logout"
				android:textColor="@color/black"
				android:textSize="15sp"/>
			<TextView
				android:id="@+id/delete_account"
				android:fontFamily="@font/notosanscjkkr_regular"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/delete_account"
				android:textColor="@color/black"
				android:textSize="15sp"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>