<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/setting_alert_back_round"
	android:orientation="vertical">

	<TextView
		android:gravity="center"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/alert_out"
		android:fontFamily="@font/notosanscjkkr_bold"
		android:textSize="20sp"
		android:textColor="@color/black"/>
	<TextView
		android:gravity="center"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/alert_out_main"
		android:fontFamily="@font/notosanscjkkr_regular"
		android:textColor="@color/black"
		android:textSize="17sp"
		android:layout_marginBottom="15dp"/>
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="0.1dp"
		android:background="@color/gray"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/alert_back_NO"
			android:gravity="center"
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/NO"
			android:fontFamily="@font/notosanscjkkr_bold"
			android:textColor="@color/black"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/alert_back_YES"
			android:gravity="center"
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/YES"
			android:fontFamily="@font/notosanscjkkr_bold"
			android:textColor="@color/main_color"
			android:textSize="20sp"/>
	</LinearLayout>
</LinearLayout>