<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_marginTop="40dp">
	<TextView
		android:layout_marginHorizontal="20dp"
		android:id="@+id/register_main"
		android:layout_marginTop="20dp"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:text="@string/register_main"
		android:textColor="@color/black"
		android:textSize="17sp"
		android:textStyle="bold"
		android:fontFamily="@font/notosanscjkkr_regular"/>
	<TextView
		android:layout_marginHorizontal="20dp"
		android:id="@+id/register_semi"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/register_semi"
		app:layout_constraintTop_toBottomOf="@id/register_main"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:textSize="13sp"
		android:fontFamily="@font/notosanscjkkr_regular"
		android:textColor="@color/black"/>

	<EditText
		android:fontFamily="@font/notosanscjkkr_regular"
		android:layout_marginTop="15dp"
		android:textSize="15sp"
		android:layout_marginHorizontal="20dp"
		android:id="@+id/register_edit_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/register_edit_text"
		app:layout_constraintTop_toBottomOf="@id/register_semi"
		android:ems="8"
		android:maxLength="8"/>
	<TextView
		android:layout_marginHorizontal="20dp"
		app:layout_constraintTop_toBottomOf="@+id/register_edit_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="abcde"
		android:textColor="@color/red"
		android:visibility="invisible"
		android:textSize="17sp"/>

	<TextView
		android:id="@+id/register_btn"
		android:fontFamily="@font/notosanscjkkr_bold"
		android:gravity="center"
		android:textSize="20sp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/finish"
		app:layout_constraintBottom_toBottomOf="parent"
		android:paddingVertical="10dp"
		android:background="@color/gray"
		android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>