<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingHorizontal="15dp"
	android:paddingTop="20dp">
	<LinearLayout
		android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/alert_back"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:src="@drawable/setting_ic_back"
			android:paddingStart="5dp"
			android:paddingEnd="10dp"/>
		<LinearLayout
			android:layout_weight="5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView
				android:layout_weight="1"
				android:layout_gravity="center"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/alert"
				android:textStyle="bold"
				android:textSize="25sp"
				android:textColor="@color/black"/>
			<TextView
				android:id="@+id/alert_chk"
				android:layout_gravity="center"
				android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
				android:text="@string/finish"
				android:fontFamily="@font/notosanscjkkr_medium"
				android:textColor="@color/gray"
				android:textSize="15sp"/>
		</LinearLayout>
	</LinearLayout>
	<ScrollView
		android:layout_marginVertical="15dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_weight="1"
					android:id="@+id/my_feed"
					android:fontFamily="@font/notosanscjkkr_regular"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/push_alert"
					android:textColor="@color/black"
					android:textSize="15sp"/>
				<Switch
					android:id="@+id/push_switch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:track="@drawable/switch_selector"/>
			</LinearLayout>

			<LinearLayout
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_weight="1"
					android:id="@+id/alert"
					android:fontFamily="@font/notosanscjkkr_regular"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/stop_all_alert"
					android:textColor="@color/black"
					android:textSize="15sp"/>
				<Switch
					android:id="@+id/stop_switch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:track="@drawable/switch_selector"/>
			</LinearLayout>

			<LinearLayout
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_weight="1"
					android:id="@+id/change_profile_image"
					android:fontFamily="@font/notosanscjkkr_regular"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/my_alert"
					android:textColor="@color/black"
					android:textSize="15sp"/>
				<Switch
					android:id="@+id/my_switch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:track="@drawable/switch_selector"/>
			</LinearLayout>

		</LinearLayout>
	</ScrollView>
</LinearLayout>