<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<TextView
		android:id="@+id/login_main_title"
		android:layout_marginHorizontal="20dp"
		android:layout_marginTop="20dp"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:text="@string/login_main_title"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:textStyle="bold"
		android:fontFamily="@font/notosanscjkkr_regular"/>
	<TextView
		android:id="@+id/login_main_text"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="20dp"
		android:text="@string/login_main_text"
		app:layout_constraintTop_toBottomOf="@id/login_main_title"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:textSize="13sp"
		android:fontFamily="@font/notosanscjkkr_regular"
		android:textColor="@color/gray"/>
	<ImageView
		android:id="@+id/login_main_img"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:src="@drawable/login_main_ic_group_1187"
		app:layout_constraintTop_toBottomOf="@id/login_main_text"
		app:layout_constraintBottom_toTopOf="@id/login_main_line"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginBottom="10dp"
		android:scaleType="centerInside"/>
	<ImageView
		android:id="@+id/login_main_line"
		android:layout_width="0dp"
		android:layout_height="0.1dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@+id/login_main_bottom"
		android:background="@color/gray"
		android:layout_marginBottom="40dp"/>
	<TextView
		android:gravity="center"
		android:id="@+id/login_main_register"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:text="@string/login_main_register"
		android:textColor="@color/black"
		android:fontFamily="@font/notosanscjkkr_regular"
		app:layout_constraintTop_toTopOf="@id/login_main_line"
		app:layout_constraintBottom_toTopOf="@id/login_main_bottom"
		android:textSize="12sp"/>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/login_main_bottom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_marginVertical="20dp">
		<FrameLayout
			android:id="@+id/login_kakao_btn"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<ImageView
				android:layout_gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/kakao_ic_rectangle"/>
			<ImageView
				android:layout_gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/kakao_talk_ic_group"/>
		</FrameLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>