<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingHorizontal="15dp"
	android:paddingTop="20dp">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/change_profile_back"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:src="@drawable/setting_ic_back"
			android:paddingStart="5dp"
			android:paddingEnd="10dp"/>
		<LinearLayout
			android:layout_weight="2.7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView
				android:layout_gravity="center"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/change_profile"
				android:textStyle="bold"
				android:textSize="25sp"
				android:textColor="@color/black"/>
			<TextView
				android:id="@+id/change_profile_chk"
				android:layout_gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/finish"
				android:fontFamily="@font/notosanscjkkr_medium"
				android:textColor="@color/gray"
				android:textSize="15sp"/>
		</LinearLayout>
	</LinearLayout>
	<FrameLayout
		android:layout_gravity="center"
		android:layout_weight="1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="-30dp">

		<de.hdodenhof.circleimageview.CircleImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_launcher_background"
			android:layout_gravity="center"
			app:civ_border_width="2dp"
			app:civ_border_color="@color/white"
			android:layout_marginBottom="30dp"/>
		<FrameLayout
			android:clickable="true"
			android:id="@+id/change_profile_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center|end">
			<com.google.android.material.floatingactionbutton.FloatingActionButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/camera_ic_action_name"
				android:backgroundTint="@color/white"
				app:borderWidth="0dp"/>
<!--			<ImageView-->
<!--				android:layout_width="wrap_content"-->
<!--				android:layout_height="wrap_content"-->
<!--				android:src="@drawable/profile_ic_ellipse_background"/>-->
<!--			<ImageView-->
<!--				android:layout_width="wrap_content"-->
<!--				android:layout_height="wrap_content"-->
<!--				android:src="@drawable/profile_ic_ellipse"-->
<!--				android:layout_gravity="center"-->
<!--				android:elevation="10dp"/>-->
<!--			<ImageView-->
<!--				android:layout_width="wrap_content"-->
<!--				android:layout_height="wrap_content"-->
<!--				android:src="@drawable/profile_ic_camera"-->
<!--				android:elevation="100dp"-->
<!--				android:layout_gravity="center"/>-->
		</FrameLayout>
	</FrameLayout>
	<LinearLayout
		android:layout_weight="2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<LinearLayout
			android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:fontFamily="@font/notosanscjkkr_regular"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/nick_name"
				android:textColor="@color/gray"
				android:textSize="13sp"/>
			<TextView
				android:fontFamily="@font/notosanscjkkr_regular"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="aaaaaaaa"
				android:textSize="15sp"
				android:textColor="@color/black"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginTop="10dp">
			<TextView
				android:fontFamily="@font/notosanscjkkr_regular"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/account"
				android:textColor="@color/gray"
				android:textSize="13sp"/>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<FrameLayout
					android:layout_gravity="center"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<ImageView
						android:layout_gravity="center"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/kakao_ic_ellipse_59"/>
					<ImageView
						android:layout_marginTop="1dp"
						android:layout_gravity="center"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/kakao_ic_vector"/>
				</FrameLayout>
				<TextView
					android:layout_marginStart="15dp"
					android:fontFamily="@font/notosanscjkkr_regular"
					android:layout_width="match_parent"
		            android:layout_height="wrap_content"
					android:text="bbbbbbb"
					android:textColor="@color/black"
					android:textSize="15sp"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>